gcc/testsuite/g++.dg/cpp0x/constexpr-nonstatic.C
// { dg-options -std=c++0x }

struct A
{
  constexpr int i;		// { dg-error "" }
};
